# Agentes

./: .env_example  README.md  main.py  pyproject.toml  requirements.txt
ch01/: assistente_simples.py  hello_llm.py  tradutor.py
ch02/: assistente_contextualizado.py  chatbot_commemoria  conversa_estruturada.py  prompt_com_data.py
ch03/: assistente_com_tools.py  atvd1.py  binding_tools.py  executar_tools.py  tool_tarefas.py
ch06/: agente_react_completo.py  chatbot.py  grafo_contador.py  produtos.db
